# compress_app

./: CMakeLists.txt  README.md
src/: compressionengine.cpp  compressionengine.h  database.cpp  database.h  diskanalyzer.cpp  diskanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  navigationbar.cpp  navigationbar.h  step1_analysis.cpp  step1_analysis.h  step2_results.cpp  step2_results.h  step3_selection.cpp  step3_selection.h  step4_compression.cpp  step4_compression.h  step5_results.cpp  step5_results.h
